Calculated the amount of Martian day data

--- a/Starter_Code/part_2_mars_weather.ipynb
+++ b/Starter_Code/part_2_mars_weather.ipynb
@@ -384,21 +384,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 1977 days worth of data\n"
+      "There are 1867 days worth of data\n"
      ]
     }
    ],
    "source": [
     "# 2. How many Martian days' worth of data are there?\n",
-    "martian_days = df['sol'].max()\n",
-    "print(f\"There are {martian_days} days worth of data\")"
+    "martian_days = df['sol'].count()\n",
+    "print(f\"There are {martian_days} days worth of data\")\n"
    ]
   },
   {
@@ -653,12 +653,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [],
    "source": [
     "browser.quit()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
